realizado implementacoes das validacoes

--- a/src/main/resources/boletim.jrxml
+++ b/src/main/resources/boletim.jrxml
@@ -1,149 +1,176 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.11.0.final using JasperReports Library version 6.11.0-0c4056ccaa4d25a5a8c45672d2f764ea3498bebb  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Simple_Blue" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9281ae04-7941-42b0-93d4-c1fedc998903">
-    <field name="id" class="java.lang.Long">
-        <property name="com.jaspersoft.studio.field.label" value="id"/>
-    </field>
-    <field name="instituicao" class="java.lang.String">
-    </field>
-    <field name="codTurma" class="java.lang.String">
-    </field>
-    <field name="nomeAluno" class="java.lang.String">
-    </field>
-    <background>
-        <band/>
-    </background>
-    <title>
-        <band height="72">
-            <frame>
-                <reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#006699" uuid="748f0128-57de-4f5c-8a18-87dd044e6606"/>
-                <staticText>
-                    <reportElement x="20" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="3b639859-3f6e-4c35-b674-60097104c11e"/>
-                    <textElement>
-                        <font size="34" isBold="true"/>
-                    </textElement>
-                    <text><![CDATA[TITLE]]></text>
-                </staticText>
-                <staticText>
-                    <reportElement x="395" y="43" width="180" height="20" forecolor="#FFFFFF" uuid="8948122a-cd8d-4aee-bf45-b4dae3dadfc5"/>
-                    <textElement textAlignment="Right">
-                        <font size="14" isBold="false"/>
-                    </textElement>
-                    <text><![CDATA[Add a description here]]></text>
-                </staticText>
-            </frame>
-        </band>
-    </title>
-    <pageHeader>
-        <band height="13"/>
-    </pageHeader>
-    <columnHeader>
-        <band height="21">
-            <line>
-                <reportElement x="-20" y="20" width="595" height="1" forecolor="#666666" uuid="91c1e662-3928-4ac7-b7a7-34923b9672b0"/>
-            </line>
-            <staticText>
-                <reportElement mode="Opaque" x="0" y="0" width="138" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="426694a3-4435-4800-b4fe-12504b17bc4a">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9d46fa0b-93fa-466c-a6f0-1f3637dba2f7"/>
-                </reportElement>
-                <textElement textAlignment="Center">
-                    <font size="14" isBold="true"/>
-                </textElement>
-                <text><![CDATA[id]]></text>
-            </staticText>
-            <staticText>
-                <reportElement mode="Opaque" x="138" y="0" width="138" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="66d429ff-34a5-4d27-a8dd-40e07601af27">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="abbc8244-ec80-4ecc-91ec-830e5fc3f96f"/>
-                </reportElement>
-                <textElement textAlignment="Center">
-                    <font size="14" isBold="true"/>
-                </textElement>
-                <text><![CDATA[instituicao]]></text>
-            </staticText>
-            <staticText>
-                <reportElement mode="Opaque" x="276" y="0" width="138" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="50bfa42c-ef7d-470f-9411-5df3f2b3f6f2">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="5bae1d4b-aa65-4bf2-b981-efc714b8f440"/>
-                </reportElement>
-                <textElement textAlignment="Center">
-                    <font size="14" isBold="true"/>
-                </textElement>
-                <text><![CDATA[cod_turma]]></text>
-            </staticText>
-            <staticText>
-                <reportElement mode="Opaque" x="414" y="0" width="138" height="20" forecolor="#006699" backcolor="#E6E6E6" uuid="32890b4d-ec57-4048-9869-0ff773891059">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="f0976392-d956-4399-9948-e125735af0f7"/>
-                </reportElement>
-                <textElement textAlignment="Center">
-                    <font size="14" isBold="true"/>
-                </textElement>
-                <text><![CDATA[periodo_turma]]></text>
-            </staticText>
-        </band>
-    </columnHeader>
-    <detail>
-        <band height="20">
-            <line>
-                <reportElement positionType="FixRelativeToBottom" x="0" y="19" width="555" height="1" uuid="2b12fb8c-563f-41ff-bf15-2cc572f9fb15"/>
-            </line>
-            <textField textAdjust="StretchHeight">
-                <reportElement x="0" y="0" width="138" height="20" uuid="b710e299-2d3f-4765-87ca-d01736cabec5">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9d46fa0b-93fa-466c-a6f0-1f3637dba2f7"/>
-                </reportElement>
-                <textElement>
-                    <font size="14"/>
-                </textElement>
-                <textFieldExpression><![CDATA[$F{id}]]></textFieldExpression>
-            </textField>
-            <textField textAdjust="StretchHeight">
-                <reportElement x="138" y="0" width="138" height="20" uuid="387f1c52-10a9-462c-a519-317ec7ce0441">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="abbc8244-ec80-4ecc-91ec-830e5fc3f96f"/>
-                </reportElement>
-                <textElement>
-                    <font size="14"/>
-                </textElement>
-                <textFieldExpression><![CDATA[$F{instituicao}]]></textFieldExpression>
-            </textField>
-            <textField textAdjust="StretchHeight">
-                <reportElement x="276" y="0" width="138" height="20" uuid="2416e27a-ad42-40ca-8c3b-9da7fb30d63a">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="5bae1d4b-aa65-4bf2-b981-efc714b8f440"/>
-                </reportElement>
-                <textElement>
-                    <font size="14"/>
-                </textElement>
-                <textFieldExpression><![CDATA[$F{codTurma}]]></textFieldExpression>
-            </textField>
-            <textField textAdjust="StretchHeight">
-                <reportElement x="414" y="0" width="138" height="20" uuid="b5f461e1-c735-4127-b5cf-3f82054298f4">
-                    <property name="com.jaspersoft.studio.spreadsheet.connectionID" value="f0976392-d956-4399-9948-e125735af0f7"/>
-                </reportElement>
-                <textElement>
-                    <font size="14"/>
-                </textElement>
-                <textFieldExpression><![CDATA[$F{nomeAluno}]]></textFieldExpression>
-            </textField>
-        </band>
-    </detail>
-    <columnFooter>
-        <band/>
-    </columnFooter>
-    <pageFooter>
-        <band height="17">
-            <textField>
-                <reportElement mode="Opaque" x="0" y="4" width="515" height="13" backcolor="#E6E6E6" uuid="af16613e-6b15-46e5-94cd-662f03b21be7"/>
-                <textElement textAlignment="Right"/>
-                <textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
-            </textField>
-            <textField evaluationTime="Report">
-                <reportElement mode="Opaque" x="515" y="4" width="40" height="13" backcolor="#E6E6E6" uuid="4665c04d-ee71-4537-94ab-c969b27523ad"/>
-                <textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
-            </textField>
-            <textField pattern="EEEEE dd MMMMM yyyy">
-                <reportElement x="0" y="4" width="100" height="13" uuid="89d291c0-1389-4ea2-b35d-c06b943f1187"/>
-                <textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
-            </textField>
-        </band>
-    </pageFooter>
-    <summary>
-        <band/>
-    </summary>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Coffee_Landscape" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="df013db5-f76e-44d3-b0df-bcbc46d93160">
+
+	<style name="Title" fontName="Times New Roman" fontSize="50" isBold="true"/>
+	<style name="SubTitle" forecolor="#736343" fontName="Arial" fontSize="18"/>
+	<style name="Column header" forecolor="#666666" fontName="Arial" fontSize="12" isBold="true"/>
+	<style name="Detail" fontName="Arial" fontSize="12"/>
+	<style name="Row" mode="Transparent">
+		<conditionalStyle>
+			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
+			<style backcolor="#CADDFC"/>
+		</conditionalStyle>
+	</style>
+	<field name="nomeAluno" class="java.lang.Object">
+		<property name="net.sf.jasperreports.javabean.field.property" value="aluno.nomeAluno"/>
+	</field>
+	<field name="sobrenomeAluno" class="java.lang.Object">
+		<property name="net.sf.jasperreports.javabean.field.property" value="aluno.sobrenomeAluno"/>
+	</field>
+	<field name="nomeDisciplina" class="java.lang.Object">
+		<property name="net.sf.jasperreports.javabean.field.property" value="disciplina.nomeDisciplina"/>
+	</field>
+	<field name="nota" class="java.lang.Double"/>
+	<background>
+		<band splitType="Stretch"/>
+	</background>
+	<title>
+		<band height="161" splitType="Stretch">
+			<staticText>
+				<reportElement style="Title" x="180" y="0" width="400" height="62" forecolor="#000000" uuid="bc1ce1da-8232-46ea-be55-cec4abb986dd"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Times New Roman" size="26"/>
+				</textElement>
+				<text><![CDATA[Boletim Escolar ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement style="Column header" x="300" y="62" width="160" height="48" forecolor="#000000" uuid="f6a78448-8260-4445-a9e0-e3fb53b080d9"/>
+				<textElement textAlignment="Center">
+					<font fontName="Times New Roman" size="24"/>
+				</textElement>
+				<text><![CDATA[Boletim]]></text>
+			</staticText>
+			<staticText>
+				<reportElement style="Column header" x="0" y="50" width="240" height="31" forecolor="#000000" uuid="a89cb965-c11a-4e97-b7e2-7580c156feb7">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1bbaa0f1-20f9-4d33-af43-2adb4809acac"/>
+				</reportElement>
+				<textElement>
+					<font size="20"/>
+				</textElement>
+				<text><![CDATA[Aluno(a):]]></text>
+			</staticText>
+		</band>
+	</title>
+	<pageHeader>
+		<band splitType="Stretch"/>
+	</pageHeader>
+	<columnHeader>
+		<band height="21" splitType="Stretch">
+			<line>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="15" width="802" height="1" forecolor="#8CB2FA" uuid="e9d2002a-c8ee-4649-a258-640dad29110c"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineColor="#999999"/>
+				</graphicElement>
+			</line>
+			<staticText>
+				<reportElement style="Column header" x="0" y="1" width="130" height="15" forecolor="#000000" uuid="dcfbc3c6-3f4d-478e-918e-a5122cee13aa">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="287f7ee2-b658-4a5b-9c85-030b4b83afa6"/>
+				</reportElement>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[Disciplina]]></text>
+			</staticText>
+			<staticText>
+				<reportElement style="Column header" x="180" y="0" width="110" height="15" forecolor="#000000" uuid="3e137f7b-d833-420e-8c74-574f0939a1c4">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="dce0535d-6118-416e-86cb-ab93b7adc9d2"/>
+				</reportElement>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[Primeiro Semestre]]></text>
+			</staticText>
+			<staticText>
+				<reportElement style="Column header" x="310" y="0" width="110" height="15" forecolor="#000000" uuid="3e137f7b-d833-420e-8c74-574f0939a1c4">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="dce0535d-6118-416e-86cb-ab93b7"/>
+				</reportElement>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[segundo Semestre]]></text>
+			</staticText>
+		</band>
+	</columnHeader>
+	<detail>
+		<band height="15" splitType="Stretch">
+			<frame>
+				<reportElement style="Row" mode="Opaque" x="0" y="0" width="802" height="15" uuid="fa7cec56-4ec1-48e6-a26e-7266a995d174"/>
+				<textField>
+					<reportElement style="Detail" isPrintRepeatedValues="false" x="0" y="-101" width="140" height="30" uuid="284bc88c-e68a-4d2f-b093-7924896580de">
+						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1bbaa0f1-20f9-4d33-af43-2adb4809acac"/>
+					</reportElement>
+					<textElement textAlignment="Center">
+						<font size="18"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{nomeAluno}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement style="Detail" isPrintRepeatedValues="false" x="0" y="-70" width="180" height="30" uuid="284bc88c-e68a-4d2f-b093-7924896580de">
+						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="1bbaa0f1-20f9-4d33-af43-2adb4809acac"/>
+					</reportElement>
+					<textElement textAlignment="Center">
+						<font size="18"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{sobrenomeAluno}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement style="Detail" x="0" y="1" width="130" height="15" uuid="07ff9bef-da96-4366-867b-d0be565c2f33">
+						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="287f7ee2-b658-4a5b-9c85-030b4b83afa6"/>
+					</reportElement>
+					<textElement textAlignment="Center"/>
+					<textFieldExpression><![CDATA[$F{nomeDisciplina}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement style="Detail" x="180" y="1" width="110" height="15" uuid="208d4160-0528-46f9-9dd2-f8178f6ccd7c">
+						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="dce0535d-6118-416e-86cb-ab93b7adc9d2"/>
+					</reportElement>
+					<textElement textAlignment="Center"/>
+					<textFieldExpression><![CDATA[$F{nota}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement style="Detail" x="310" y="0" width="110" height="15" uuid="3470a27f-c8ee-4747-b0d6-4bb57e5294b7">
+						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="dce0535d-6118-416e-86cb-ab93b7"/>
+					</reportElement>
+					<textElement textAlignment="Center"/>
+					<textFieldExpression><![CDATA[$F{nota}]]></textFieldExpression>
+				</textField>
+			</frame>
+		</band>
+	</detail>
+	<columnFooter>
+		<band height="6" splitType="Stretch">
+			<line>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="3" width="802" height="1" uuid="fa5e88d5-a011-4e32-8f12-ce923f903111"/>
+				<graphicElement>
+					<pen lineWidth="0.5" lineColor="#999999"/>
+				</graphicElement>
+			</line>
+		</band>
+	</columnFooter>
+	<pageFooter>
+		<band height="25" splitType="Stretch">
+			<frame>
+				<reportElement mode="Opaque" x="-21" y="1" width="843" height="24" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="5d8169bd-4a75-48c8-8a68-6d3ad5ba9402"/>
+				<textField evaluationTime="Report">
+					<reportElement style="Column header" x="783" y="1" width="40" height="20" forecolor="#000000" uuid="e5e27efa-b599-499b-9ca3-848cb511cb7b"/>
+					<textElement verticalAlignment="Middle">
+						<font size="10" isBold="false"/>
+					</textElement>
+					<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+				</textField>
+				<textField>
+					<reportElement style="Column header" x="703" y="1" width="80" height="20" forecolor="#000000" uuid="18cfe1ca-f7d6-48b0-9827-28578b42a5e0"/>
+					<textElement textAlignment="Right" verticalAlignment="Middle">
+						<font size="10" isBold="false"/>
+					</textElement>
+					<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
+				</textField>
+				<textField pattern="EEEEE dd MMMMM yyyy">
+					<reportElement style="Column header" x="22" y="1" width="197" height="20" forecolor="#000000" uuid="fbce24bb-3cb1-44a3-8eec-8c067ddbe5b5"/>
+					<textElement verticalAlignment="Middle">
+						<font size="10" isBold="false"/>
+					</textElement>
+					<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+				</textField>
+			</frame>
+		</band>
+	</pageFooter>
+	<summary>
+		<band splitType="Stretch"/>
+	</summary>
 </jasperReport>
